# async_arch_project

./: README.md  pyproject.toml
auth/: db.py  enums.py  run.py  settings.py
auth/alembic/: env.py
auth/crud/: crud_user.py
auth/dto/: user.py
auth/models/: user.py
auth/utils/: __init__.py  auth.py  user.py
homework_0/: homework_0.md
homework_1/: homework_1.md  homework_1_fixed.md
