[tool.poetry]
name = "async_arch_project"
version = "0.1.0"
description = ""
authors = ["Ratnik Kristina <kristi.2001@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
